--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,17 @@
       @case ('progetti'){
         <progetti-page></progetti-page>
       }
+      @case ('notizie'){
+        <notizie-page></notizie-page>
+      }
+      @case ('me'){
+        <h1>Questa sezione é in attesa di aggiornamento</h1>
+        <p>Sotto potrai comunque visualizzare la sezione appartenente al vecchio sito.</p>
+        <iframe
+          style="width: 100%; height: 100%"
+          src="https://bigcompany.altervista.org/VecchioSito/InnerPages/AboutMe.html">
+        </iframe>
+      }
     }
   </div>
   <social-footer></social-footer>
