--- a/src/app/pages/progetti-page/progetto-card/progetto-card.component.scss
+++ b/src/app/pages/progetti-page/progetto-card/progetto-card.component.scss
@@ -7,6 +7,10 @@
   border: 1px solid $text-color-dark;
   border-radius: 12px;
 
+  >h2{
+    margin-top: 0 !important;
+  }
+
   >a{
     color: $text-color-dark;
     margin-top: 30px;
