--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,7 @@
         <notizie-page></notizie-page>
       }
       @case ('me'){
-        <h1>Questa sezione é in attesa di aggiornamento</h1>
-        <p>Sotto potrai comunque visualizzare la sezione appartenente al vecchio sito.</p>
-        <iframe
-          style="width: 100%; height: 100%"
-          src="https://bigcompany.altervista.org/VecchioSito/InnerPages/AboutMe.html">
-        </iframe>
+        <me-page></me-page>
       }
     }
   </div>
