--- a/src/app/layout/dot-layout/dot-layout.component.scss
+++ b/src/app/layout/dot-layout/dot-layout.component.scss
@@ -1,5 +1,6 @@
 .DotLayoutContainer{
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: auto;
   position: relative;
