--- a/src/app/pages/me-page/me-page.component.html
+++ b/src/app/pages/me-page/me-page.component.html
@@ -2,10 +2,10 @@
   <div class="IntroduzioneContainer anchor">
     <h1 class="center">Benvenuto o Benvenuta</h1>
     <br/>
-    <p class="center">Sono molto lieto che tu voglia saperne di più sulla mia storia</p>
+    <p class="center">In questa sezione troverai molte informazioni sul mio percorso e sulle mie capacità.</p>
+    <p class="center">La pagina si articola in profondità. Buona lettura.</p>
     <br/>
     <br/>
-    <h2 class="center">Per procedere scrolla verso il basso</h2>
     <div class="ScrollImageContainer">
       <img alt="Freccia scroll verso il basso" src="assets/icons/arrowDownIcon.png"/>
     </div>
@@ -71,12 +71,11 @@
     <p class="center">
       Nel 2022 mi laureo in ITPS con una votazione di <b>110/110</b> portando come progetto di esame una simulatore virtuale per l'apprendimento del personale che deve lavorare
       negli ambienti confinati. Tale progetto é stato presentato all'INAL <a href="https://www.inail.it/cs/internet/comunicazione/news-ed-eventi/eventi/evento-conclusivo-prog-spirit-2023.html">SPIRIT</a>.
-      Tuttavia da nessuna parte viene menzionato il mio nome pur essendo stato l'unico sviluppatore dietro il progetto. <br/>
-      Fortunatamente ho la mia testi che documenta il tutto <a download="SlideTesi" href="/Tesi/SlideTesi.pptx">TESI</a>, comunque una bella inculata.
+      Tuttavia da nessuna parte viene menzionato il mio nome pur essendo stato l'unico sviluppatore dietro il progetto. Fortunatamente la mia <a download="SlideTesi" href="/Tesi/SlideTesi.pptx">TESI</a> documenta il mio lavoro.
     </p>
     <br/>
     <p class="center">
-      Dal 2022 inizio a lavorare come Full-Stack (Molto Junior) come Freelancer e nel 2023 vengo infine assunto presso <b>Open Reply</b> nel quale al momento ricopro il ruolo
+      Dal 2022 inizio a lavorare come Full-Stack (Molto Junior) e nel 2023 vengo assunto presso <b>Open Reply</b> nel quale al momento ricopro il ruolo
       di <b>Front-End Developer</b>.
     </p>
   </div>
@@ -84,11 +83,31 @@
     <h1 class="center">Quali competenze possiedo?</h1>
     <br/>
     <p class="center">Nel corso degli anni ho acquisito diverse competenze e tuttora continuo a studiare per ottenerne di nuove</p>
-    <p class="center">Premetto che non possiedo buone competenze con tutte le tecnologie che sto per elencare per questo motivo le contraddistinguo per colori :')</p>
-    <h1 class="center">Parte in allestimento, mi devo sbrigare altrimenti Giada mi ammazza che faccio tardi :)</h1>
+    <ul>
+      <li>Linguaggio C;</li>
+      <li>Linguaggio C#;</li>
+      <li>Linguaggio LUA;</li>
+      <li>Linguaggio JAVA;</li>
+      <li>Linguaggio PYTON;</li>
+      <li>Linguaggio HTML;</li>
+      <li>Linguaggio CSS, SCSS, SASS;</li>
+      <li>Linguaggio JAVASCRIPT, TYPESCRIPT;</li>
+    </ul>
+    <br/>
+    <p>Inoltre attraverso il mio lavoro ho avuto modo di utilizzare diversi framework e librerie per lo sviluppo web come:</p>
+    <ul>
+      <li>Libreria React;</li>
+      <li>Framework Next;</li>
+      <li>Framework Angular;</li>
+      <li>Libreria THREE.JS;</li>
+      <li>Ambiente Node;</li>
+      <li>Libreria Express;</li>
+    </ul>
+    <br/>
+    <p>Solitamente non utilizzo librerie particolari, preferisco realizzare tutto ciò che mi serve da me al momento, in modo tale da capirne completamente il funzionamento</p>
   </div>
   <div class="standardColumnContainer fullSize anchor">
-    <h1 class="center">Questo é tutto, grazie per l'attenzione</h1>
+    <h1 class="center">Questo per il momento é tutto, grazie per l'attenzione</h1>
     <p class="center">Aggiornato al 13/05/2024</p>
   </div>
 </scroll-layout>
